--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
             </ul>
         </div>
       </div>
-    </header>
-    <main>
-      <div class="card w-5/6 mt-12 mx-36">
+      <div class="card w-5/6 lg:mt-12 lg:mx-36">
         <figure class="mb-6">
           <img
             src="assets/banner.png"
@@ -111,7 +109,209 @@
           </div>
         </div>
       </div>
+    </header>
+    <main>
+<!--about section-->
+     <div class="bg-zinc-100">
+                <div class=" mx-6 lg:my-24 lg:mx-32">
+                  <div class="sm:fill-none hidden md:flex">
+                    <img src="assets/Vector.png" class="mt-9">
+                  </div>
+                    <div class=" lg:flex flex-reverse">
+                        <div>
+                            <div class="text-center lg:text-left">
+                              <button class="btn rounded-full mt-4 font-color-h bg-white border-none hover:bg-white"> <i class="fa-solid fa-arrow-right arrow font-color-h"></i> About Us</button>
+                            </div>
+                            
+                            <h3 class="text-5xl font-bold my-8 text-center lg:text-left font-color-h">We design thoughtful, liveable
+                                spaces</h3>
+                            <p class="font-color-p">The barn house captivates with its blend of rustic charm and
+                                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+                            <div class="flex bg-white my-6 rounded-2xl">
+                                <img src="assets/commercial.png" alt="negative">
+                                <div class=" mx-6">
+                                    <b class="font-color-h">Commercial</b>
+                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+                                </div>
+                            </div>
+                            <div class="flex bg-white my-6 rounded-2xl">
+                                <img src="assets/residential.png" alt="negative">
+                                <div class=" mx-6">
+                                    <b class="font-color-h">Resedential</b>
+                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="mx-7 my-8 ">
+                            <img class="w-9/12 " src="assets/Rectangle.png" alt="">
+                        </div>
+                    </div>
+                    <!--work process-->
+                    <div>
+                        <div class="text-center mt-24 gap-6">
+                          <button class="btn rounded-full mt-4 font-color-h bg-white border-none hover:bg-white"> 
+                            <i class="fa-solid fa-arrow-right arrow font-color-h"></i> How we Work</button>
+                            <h2 class="text-5xl font-bold font-color-h my-8 text-center gap-6">Our Work Process</h2>
+                            <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
+                                featuring weathered wood, sleek metal accents.</p>
+                        </div>
+                        <div class=" lg:mt-6 lg:grid grid-cols-4 mx-auto lg:gap-x-6">
+                            <div class="card bg-card1 w-auto my-6">
+                                <div class="card-body bg-[#E7C1D3] rounded-2xl">
+                                    <div class="card-actions justify-first">
+                                        <img src="assets/concept.png" alt="nagative">
+                                    </div>
+                                    <h2 class="font-color-h font-bold">Concept</h2>
+                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+
+                                </div>
+                            </div>
+
+                            <div class="card bg-card2 w-auto my-6">
+                                <div class="card-body rounded-2xl bg-[#EFDA6E] ">
+                                    <div class="card-actions justify-first">
+                                        <img src="assets/flow-chart.png" alt="negative">
+                                    </div>
+                                    <h2 class="card-title font-bold font-color-h">Design Progress</h2>
+                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+
+                                </div>
+                            </div>
+                            <div class="card bg-card3 w-auto my-6">
+                                <div class="card-body rounded-2xl bg-[#A4DAC3]">
+                                    <div class="card-actions justify-first">
+                                        <img src="assets/vision.png" alt="negative">
+                                    </div>
+                                    <h2 class="card-title font-bold font-color-h">Supervision</h2>
+                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+
+                                </div>
+                            </div>
+                            <div class="card bg-card4 w-auto my-6">
+                                <div class="card-body rounded-2xl bg-[#77AAEA]">
+                                    <div class="card-actions justify-first">
+                                        <img src="assets/budget-planning.png" alt="negative">
+                                    </div>
+                                    <h2 class="card-title font-bold font-color-h">Budget planning</h2>
+                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!--work process-->
+            <div class="m-6 lg:mx-32 lg:mb-24">
+                <div class=" text-center lg:py-5">
+                  <button class="btn rounded-full border-none font-color-p bg-opacity-20" style="background-color: rgba(171, 239, 95, 0.2);">
+                    <i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
+                    <h2 class="text-5xl font-bold my-8 gap-6 font-color-h">Our Latest Portfolio</h2>
+                    <p class="font-color-h">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring
+                        weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="m-6 lg:grid grid-cols-4 gap-6">
+                    <div class="col-span-3">
+                        <div class="lg:flex bg-white rounded-xl bg-base-100  shadow-xl items-center justify-center">
+                            <figure class="px-20 py-10">
+                                <img src="assets/img1.png" alt="House" class=" rounded-xl" />
+                            </figure>
+                            <div class="card-body]">
+                                <h2 class="text-xl font-bold font-color-h mb-4">Commercial</h2>
+                                <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern. The barn house
+                                    captivates with its blend of rustic charm and modern .</p>
+                                <div class="card-actions">
+                                    <button class="font-bold pt-5 font-color-h">View Details
+                                      <i class="fa-solid fa-arrow-right -rotate-45 ml-2 border-solid bg-shared-color 
+                                      rounded-full text-black p-2"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" mb-6 flex rounded-xl shadow-xl items-center justify-center">
+                        <div class="px-10 py-10">
+                            <img src="assets/img2.png" alt="" class="rounded-xl" />
+                        </div>
+                    </div>
+                    <div class="my-6 flex rounded-xl bg-white  shadow-xl items-center justify-center">
+                        <figure class="px-10 py-10">
+                            <img src="assets/img3.png" alt="House" class="mx-auto rounded-xl" />
+                        </figure>
+                    </div>
+                    <div class="col-span-2">
+
+                        <div class="my-6 lg:flex rounded-xl bg-white bg-base-100 shadow-xl items-center justify-center">
+                            <div class="px-10">
+                                <img src="assets/img4.png" alt="" class="mx-auto rounded-xl" />
+                            </div>
+                            <div class="card-body bg-white">
+                                <h2 class="text-xl font-bold">Commercial</h2>
+                                <p>The barn house captivates with its blend of rustic charm and modern. The barn house
+                                    captivates with its blend of rustic charm and modern .</p>
+                                <div class="card-actions">
+                                    <button class="font-color-h font-bold py-5">View Details<i
+                                            class="fa-solid fa-arrow-right -rotate-45 ml-2 border-solid bg-shared-color 
+                                            rounded-full text-black p-2"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-6 flex rounded-xl bg-white shadow-xl items-center justify-center">
+                        <figure class="px-10 py-10">
+                            <img src="assets/img5.png" alt="House" class="rounded-xl" />
+                        </figure>
+                    </div>
+                </div>
+            </div>
+<!--portfolio-->
+            <div class=" bg-[url('/assets/bg.jpg')] ">
+
+                <div>
+                    <div class=" text-center px-6 py-6 lg:py-6 lg:my-6">
+
+                        <button class="btn bg-[#c2e29e] rounded-full font-color-h px-10 border-none hover:bg-white"><i
+                                class="fa-solid fa-arrow-right font-v=color-h"></i>Let's Connect</button>
+                        <h2 class="text-5xl font-bold my-8 gap-6 font-color-h">Let's Discuss next Project</h2>
+                        <p class="font-color-p">The barn house captivates with barn house captivates with its blend of rustic charm and
+                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+
+<!--form-->
+                    <div class="container mx-auto">
+
+                        <div class="w-full p-8 my-4 md:px-12 lg:w-full lg:pl-20 lg:pr-40 m-auto rounded-3xl">
+
+                            <div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
+                                <input
+                                    class="w-full bg-white text-gray-900 mt-2 p-3 rounded-3xl focus:outline-none focus:shadow-outline"
+                                    type="text" placeholder="First Name*" />
+                                <input
+                                    class="w-full bg-white text-gray-900 mt-2 p-3 rounded-3xl focus:outline-none focus:shadow-outline"
+                                    type="text" placeholder="Last Name*" />
+                                <input
+                                    class="w-full bg-white text-gray-900 mt-2 p-3 rounded-3xl focus:outline-none focus:shadow-outline"
+                                    type="email" placeholder="Phone Number*" />
+                                <input
+                                    class="w-full bg-white text-gray-900 mt-2 p-3 rounded-3xl focus:outline-none focus:shadow-outline"
+                                    type="number" placeholder="Email Number*" />
+                            </div>
+                            <div class="my-4">
+                                <textarea placeholder="Write your message here*"
+                                    class="w-full h-52 bg-white text-gray-900 mt-2 p-3 rounded-3xl focus:outline-none focus:shadow-outline"></textarea>
+                            </div>
+                            <div class="my-2 ">
+                                <button class="uppercase text-sm font-bold tracking-wide bg-[#a2e951] text-black p-3 rounded-full w-full">
+                                    Send Mail<i class="fa-solid fa-arrow-right arrow1 -rotate-45 border-solid rounded-full text-white bg-black ml-2  p-2"></i>
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
     </main>
+<!--footer-->
     <footer>
 
     </footer>
