added footer section

--- a/index.html
+++ b/index.html
@@ -312,8 +312,35 @@
             </div>
     </main>
 <!--footer-->
-    <footer>
+<footer class="bg-black ">
+    <div class="py-16">
+        <div class="text-white text-center">
 
-    </footer>
+            <a class="btn btn-ghost text-2xl"><i class="fa-solid fa-arrow-right arrow -rotate-45 border-solid bg-shared-color rounded-full text-black p-2"></i>Rinterio</a>
+
+            <p class="mt-4 mb-12 lg:mx-60">We did a lot project about 889.With extensive experience in the field and a
+                team of talented engineers and architects, Proiectari.md guarantees that you will receive
+                construction projects of the highest quality. To take possession of Rinterio house project –
+                890, please contact us via the contact form available on our website or call us on the phone
+                number shown. We will be happy to provide you with all the necessary information and guide you
+                through the purchase process.
+
+            </p>
+
+            <nav class="grid grid-rows-4 lg:grid-cols-6 place-content-center gap-4">
+                <a class="link link-hover lg:col-start-2">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+        </div>
+
+
+        <div class="text-center pt-5">
+            <a class="btn rounded-full bg-shared-color font-color-h">Book Consult
+                <i class="fa-solid arrow1 fa-arrow-right -rotate-45 border-solid bg-black rounded-full text-white p-2"></i></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
