--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         </figure>
         <div class="text-center">
           <h2 class="mb-6 text-6xl font-extrabold font-color-h">A barn house of this design has a  <br> striking appearance</h2>
-          <p class="mb-6 text-base font-medium font-color-p">The barn house captivates with its 
-            blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal
-             <br> accents, and large windows that flood the space with natural light.</p>
+          <p class="mb-6 text-base font-medium font-color-p">Construction websites are a huge part of a construction business. 
+            <br>Other construction companies, builders, architects and design professionals all use the 
+            internet to find each other and communicate with one another.</p>
           <div class="card-actions justify-center">
             <button class="btn bg-[#cae6a8] border-inherit rounded-full font-color-h hover:bg-neutral-400">View Details 
               <i class="fa-solid fa-arrow-right -rotate-45 border-solid bg-[#93e635] rounded-full text-black p-2"></i></button>
@@ -125,21 +125,20 @@
                             
                             <h3 class="text-5xl font-bold my-8 text-center lg:text-left font-color-h">We design thoughtful, liveable
                                 spaces</h3>
-                            <p class="font-color-p">The barn house captivates with its blend of rustic charm and
-                                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                            <p class="font-color-p">The hero section of the website displays an exciting video background, while the services section has unique and beautiful pictures. Important contact information of this construction company is clearly presented with easy navigation.</p>
 
                             <div class="flex bg-white my-6 rounded-2xl">
                                 <img src="assets/commercial.png" alt="negative">
                                 <div class=" mx-6">
                                     <b class="font-color-h">Commercial</b>
-                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+                                    <p class="font-color-p">Extensive collections of architectural works with images, plans, and project details..</p>
                                 </div>
                             </div>
                             <div class="flex bg-white my-6 rounded-2xl">
                                 <img src="assets/residential.png" alt="negative">
                                 <div class=" mx-6">
                                     <b class="font-color-h">Resedential</b>
-                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+                                    <p class="font-color-p"> Extensive collections of architectural works with images, plans, and project details.</p>
                                 </div>
                             </div>
 
@@ -154,8 +153,7 @@
                           <button class="btn rounded-full mt-4 font-color-h bg-white border-none hover:bg-white"> 
                             <i class="fa-solid fa-arrow-right arrow font-color-h"></i> How we Work</button>
                             <h2 class="text-5xl font-bold font-color-h my-8 text-center gap-6">Our Work Process</h2>
-                            <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
-                                featuring weathered wood, sleek metal accents.</p>
+                            <p class="font-color-p">The hero slider of this construction company is simple yet elegant and pleasing.</p>
                         </div>
                         <div class=" lg:mt-6 lg:grid grid-cols-4 mx-auto lg:gap-x-6">
                             <div class="card bg-card1 w-auto my-6">
@@ -164,7 +162,7 @@
                                         <img src="assets/concept.png" alt="nagative">
                                     </div>
                                     <h2 class="font-color-h font-bold">Concept</h2>
-                                    <p class="font-color-p">The barn house captivates with its blend of rustic charm and modern.</p>
+                                    <p class="font-color-p">A construction website design that is simple, modern and stylish.</p>
 
                                 </div>
                             </div>
@@ -208,8 +206,9 @@
                   <button class="btn rounded-full border-none font-color-p bg-opacity-20" style="background-color: rgba(171, 239, 95, 0.2);">
                     <i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
                     <h2 class="text-5xl font-bold my-8 gap-6 font-color-h">Our Latest Portfolio</h2>
-                    <p class="font-color-h">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring
-                        weathered wood, sleek metal accents.</p>
+                    <p class="font-color-h"> Visiting the Maman’s Corp construction website is a wonderful experience. 
+                        Everything about this site is fascinating; <br>
+                        the videos and scroll-triggered transitions are very engaging. The website design, typeface, and color scheme are all well thought out.</p>
                 </div>
                 <div class="m-6 lg:grid grid-cols-4 gap-6">
                     <div class="col-span-3">
@@ -318,14 +317,8 @@
 
             <a class="btn btn-ghost text-2xl"><i class="fa-solid fa-arrow-right arrow -rotate-45 border-solid bg-shared-color rounded-full text-black p-2"></i>Rinterio</a>
 
-            <p class="mt-4 mb-12 lg:mx-60">We did a lot project about 889.With extensive experience in the field and a
-                team of talented engineers and architects, Proiectari.md guarantees that you will receive
-                construction projects of the highest quality. To take possession of Rinterio house project –
-                890, please contact us via the contact form available on our website or call us on the phone
-                number shown. We will be happy to provide you with all the necessary information and guide you
-                through the purchase process.
-
-            </p>
+            <p class="mt-4 mb-12 lg:mx-60">The hero section of the website displays an exciting video background, while the services section has unique and beautiful pictures. Important contact information of this construction company is clearly presented with easy navigation.
+ </p>
 
             <nav class="grid grid-rows-4 lg:grid-cols-6 place-content-center gap-4">
                 <a class="link link-hover lg:col-start-2">About us</a>
